Atualização para Java8, README BR e compile&&execute